--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Мой сайт</title>
+</head>
+<body>
+  <h1>Добро пожаловать на наш сайт!</h1>
+  <nav>
+    <a href="ru/index.html">Русский язык</a>
+    <a href="en/index.html">English</a>
+  </nav>
+</body>
+</html>
