--- a/en/index.html
+++ b/en/index.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Our site</title>
+</head>
+<body>
+  <h1>Hello! We are glad to see you!</h1>
+</body>
+</html>
