--- a/ru/index.html
+++ b/ru/index.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Наш сайт</title>
+</head>
+<body>
+  <h1>Здравствуйте! Мы рады приветсвовать вас!</h1>
+</body>
+</html>
