--- a/index.html
+++ b/index.html
@@ -1,8 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="style.css">
   <title>Мой сайт</title>
+  <style>
+    body {
+      background-color: #f0f0f0; /* Цвет фона */
+      color: #333; /* Цвет текста */
+      font-family: 'Arial', sans-serif; /* Шрифт */
+      font-size: 16px; /* Размер шрифта */
+      line-height: 1.5; /* Межстрочный интервал */
+      padding: 20px; /* Отступы по краям */
+    }
+
+    nav a {
+      color: #007bff; /* Цвет ссылок */
+      text-decoration: none; /* Убрать подчеркивание */
+      margin-right: 1rem; /* Отступ справа */
+    }
+
+    nav a:hover {
+      text-decoration: underline; /* Подчеркнуть при наведении */
+    }
+  </style>
 </head>
 <body>
   <h1>Добро пожаловать на наш сайт!</h1>
