--- a/index.html
+++ b/index.html
@@ -4,22 +4,19 @@
   <title>Мой сайт</title>
   <style>
     body {
-      background-color: #f0f0f0; /* Цвет фона */
-      color: #333; /* Цвет текста */
-      font-family: 'Arial', sans-serif; /* Шрифт */
-      font-size: 16px; /* Размер шрифта */
-      line-height: 1.5; /* Межстрочный интервал */
-      padding: 20px; /* Отступы по краям */
+      background-color: #f0f0f0;
+      color: #333;
+      font-family: 'Arial', sans-serif;
+      line-height: 1.5;
     }
 
     nav a {
-      color: #007bff; /* Цвет ссылок */
-      text-decoration: none; /* Убрать подчеркивание */
-      margin-right: 1rem; /* Отступ справа */
+      color: #007bff;
+      text-decoration: none;
     }
 
     nav a:hover {
-      text-decoration: underline; /* Подчеркнуть при наведении */
+      text-decoration: underline;
     }
   </style>
 </head>
