--- a/en/index.html
+++ b/en/index.html
@@ -2,6 +2,23 @@
 <html>
 <head>
   <title>Our site</title>
+  <style>
+    body {
+      background-color: #f0f0f0;
+      color: #333;
+      font-family: 'Arial', sans-serif;
+      line-height: 1.5;
+    }
+
+    nav a {
+      color: #007bff;
+      text-decoration: none;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
   <h1>Hello! We are glad to see you!</h1>
