--- a/ru/index.html
+++ b/ru/index.html
@@ -2,6 +2,23 @@
 <html>
 <head>
   <title>Наш сайт</title>
+  <style>
+    body {
+      background-color: #f0f0f0;
+      color: #333;
+      font-family: 'Arial', sans-serif;
+      line-height: 1.5;
+    }
+
+    nav a {
+      color: #007bff;
+      text-decoration: none;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
   <h1>Здравствуйте! Мы рады приветсвовать вас!</h1>
