--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <title>Мой сайт</title>
   <style>
     body {
-      background-color: #f0f0f0;
-      color: #333;
+      background-color: #ffe0e6;
+      color: #fff;
       font-family: 'Arial', sans-serif;
       line-height: 1.5;
     }
 
     nav a {
-      color: #007bff;
+      color: #fff;
       text-decoration: none;
     }
 
