--- a/en/index.html
+++ b/en/index.html
@@ -22,5 +22,6 @@
 </head>
 <body>
   <h1>Hello! We are glad to see you!</h1>
+  <img src="https://i.pinimg.com/originals/ae/73/ad/ae73ad4c9aa5210598ab9c78b2a5fae1.jpg" alt="Котик">
 </body>
 </html>
